--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.372.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.2",
     "next": "14.2.2",
     "query-string": "^9.0.0",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "resend": "^3.2.0",
     "svix": "^1.21.0",
