--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "eslint-plugin-tailwindcss": "^3.15.1",
     "lucide-react": "^0.372.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.2",
