--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "eslint-plugin-tailwindcss": "^3.15.1",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.372.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.2",
