--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.372.0",
     "next": "14.2.2",
     "next-auth": "^5.0.0-beta.17",
+    "prisma": "^5.13.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
