update auth with google client infos

--- a/.env
+++ b/.env
@@ -5,3 +5,8 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:admin@localhost:5432/villaeffroi"
+
+GOOGLE_CLIENT_ID="854081927875-pclod1207ac24noa20u9ulu3jdlau6fb.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
+
+NEXTAUTH_SECRET="R8RSsiK0aRKoaqj2lWUhHc1LZzwLmcBukwjpUVoUrow="
