--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,13 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "components/shared/Account/ExperienceFetch.tsx", "app/(auth)/account/page.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "components/shared/Account/ExperienceFetch.tsx",
+    "app/(auth)/account/page.tsx"
+  ],
   "exclude": ["node_modules"]
 }
