--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "components/shared/Account/ExperiencesFetch.tsx",
+    "app/(auth)/account/experiences/ExperiencesFetch.tsx",
     "app/(auth)/account/page.tsx"
   ],
   "exclude": ["node_modules"]
