--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.0.0",
+    "@kinde-oss/kinde-auth-nextjs": "^2.2.10",
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -31,7 +32,6 @@
     "gsap": "^3.12.5",
     "lucide-react": "^0.377.0",
     "next": "14.2.2",
-    "next-auth": "^5.0.0-beta.17",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
