--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "eslint-plugin-tailwindcss": "^3.15.1",
+    "framer-motion": "^11.2.10",
     "gsap": "^3.12.5",
     "lucide-react": "^0.377.0",
     "next": "14.2.2",
