--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "resend": "^3.2.0",
     "stripe": "^15.8.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.5",
-    "zustand": "^4.5.2"
+    "zod": "^3.23.5"
   },
   "devDependencies": {
     "@types/node": "^20",
