--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.0.0",
     "@kinde-oss/kinde-auth-nextjs": "^2.2.10",
+    "@lottiefiles/react-lottie-player": "^3.5.4",
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
